Refactor text input to Input class and add numeric input

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ add_executable(MovieDb main.cpp
     menu.h menu.cpp
     movie.h movie.cpp
     movies.h movies.cpp
-    printable.cpp printable.h)
+    printable.cpp printable.h
+    input.h input.cpp)
 
 target_include_directories(MovieDb PRIVATE /usr/local/include/ansicodes)
 target_link_libraries(MovieDb PRIVATE ansicodes::ansicodes_lib)
